Add readme and docker conf